Add review and user logic on springboot backend
