# backend/springboot/src/main/java/com/doryann/flowpilot/command/api/review/CreateReviewCommand.java
@@ -1,4 +1,4 @@
-package com.doryann.flowpilot.event.media;
+package com.doryann.flowpilot.command.api.review;
 
 import jakarta.validation.constraints.NotNull;
 import lombok.Builder;
@@ -8,8 +8,13 @@ import java.util.UUID;
 
 @Builder
 @Value
-public class RateMediaEvent {
+public class CreateReviewCommand {
+    @NotNull
+    UUID reviewId;
     @NotNull
     UUID mediaId;
+    @NotNull
+    UUID userId;
     int rating;
+    String content;
 }
