# backend/springboot/src/main/java/com/doryann/flowpilot/query/api/review/FindReviewByIdQuery.java
@@ -1,0 +1,14 @@
+package com.doryann.flowpilot.query.api.review;
+
+import jakarta.validation.constraints.NotNull;
+import lombok.Builder;
+import lombok.Value;
+
+import java.util.UUID;
+
+@Builder
+@Value
+public class FindReviewByIdQuery {
+    @NotNull
+    UUID reviewId;
+}
